[gd_scene load_steps=10 format=3 uid="uid://cy30twi4bgl3n"]

[ext_resource type="Script" path="res://Scripts/Drone.gd" id="1_81ivd"]
[ext_resource type="Shader" path="res://Shaders/Outline.gdshader" id="2_o8vx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ta61"]
size = Vector2(36, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_qckk7"]
radius = 204.475

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2kiu4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_r21c3"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rdwd4"]
shader = ExtResource("2_o8vx0")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bukrw"]
radius = 410.329

[sub_resource type="CircleShape2D" id="CircleShape2D_dkmso"]
radius = 20.025

[node name="Drone" type="CharacterBody2D" groups=["Enemy"]]
self_modulate = Color(1, 0, 0, 1)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_81ivd")

[node name="HitBox" type="CollisionShape2D" parent="."]
modulate = Color(1, 0, 0, 1)
shape = SubResource("RectangleShape2D_8ta61")

[node name="HackingRadius" type="Area2D" parent="." groups=["hackingradius"]]

[node name="Area" type="CollisionShape2D" parent="HackingRadius"]
shape = SubResource("CircleShape2D_qckk7")

[node name="HackingProgressBar" type="TextureProgressBar" parent="."]
offset_left = -93.0
offset_top = -83.0
offset_right = 5.99999
offset_bottom = -58.0
scale = Vector2(1.88989, 0.966821)
max_value = 0.1
step = 0.02
nine_patch_stretch = true
texture_under = SubResource("CompressedTexture2D_2kiu4")
texture_progress = SubResource("CompressedTexture2D_r21c3")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
material = SubResource("ShaderMaterial_rdwd4")
scale = Vector2(0.3125, 0.3125)
texture = SubResource("CompressedTexture2D_r21c3")

[node name="hinge" type="Node2D" parent="."]

[node name="bulletSpawnpoint" type="Marker2D" parent="hinge"]
position = Vector2(56, 0)

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="range" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_bukrw")

[node name="dmgBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dmgBox"]
shape = SubResource("CircleShape2D_dkmso")

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="body_entered" from="dmgBox" to="." method="_on_dmg_box_body_entered"]
